# cantanor

./: .gitignore  BROWSER_TACTICAL_TRPG_ANALYSIS.md  BUILD_FIXED.md  CLAUDE.md  CODE_REVIEW_ISSUES.md  CONTENT_AUTHORING.md  CORRECTIONS_APPLIED.md  COVERAGE_GAP_ANALYSIS.md  Cargo.toml  DESIGNER_TOOLS_PLAN.md  DESIGNER_TOOLS_USAGE.md  FINAL_TEST_COVERAGE_SUMMARY.md  FIXES_APPLIED.md  FIX_COMPLETE.md  FIX_SUMMARY.md  GAME_DESIGN_WORKFLOW.md  GAME_READY_ANALYSIS.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_COMPLETE.md  MIGRATION_VALIDATION.md  OPTIMAL_PANEL_LAYOUTS.md  PANEL_LAYOUT_SUMMARY.md  PATHFINDER2_ORC_REFERENCE.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE6_IMPLEMENTATION_PLAN.md  PHASE7_IMPLEMENTATION_PLAN.md  PHASE8_IMPLEMENTATION_PLAN.md  PHASE9_IMPLEMENTATION_PLAN.md  PRE_DELETION_SAFETY_CHECK.md  PYTHON_DELETION_CHECKLIST.md  PYTHON_DELETION_COMPLETE.md  README.md  READY_TO_BUILD.md  REFACTORING_SUMMARY.md  ROADMAP.md  ROADMAP_VERIFICATION.md  TILED_INTEGRATION_PLAN.md  TYPESCRIPT_BROWSER_REFACTORING_PLAN.md  TYPESCRIPT_TECHNICAL_SPEC.md  (+8 more)
Tiled/: README.md  gen_tileset.mjs  temple_courtyard.tmj  validate.mjs
archive/: index.html  package-lock.json
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
compiled/: fireball_rune_basic_result.json  hidden_pit_basic_result.json  m2_save_effect_basic_result.json  m35_affliction_tick_basic_result.json  m3_trigger_hazard_source_basic_result.json  phase25_verification_report.json  phase2_verification_report.json  (+23 more)
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
(+372 files in other folders)
